--- a/01_basics/6.0_Str_Slicing.md
+++ b/01_basics/6.0_Str_Slicing.md
@@ -18,12 +18,29 @@
 
 ```python
 text[Start:Stop:Step]
+text = "I love Python"
 ```
 
 * `Start` – מאיזה אינדקס להתחיל (כלול)
 * `Stop` – איפה לעצור (לא כלול!)
 * `Step` – באיזה דילוג (ברירת מחדל: 1)
 
+יש לנו 5 כללים שעובדים עבור מחרוזות,רשימות וטווחים
+text[5]
+1. על מנת לשלוף תו ספציפי, נרשום את שם המשתנה ובלי רווח אחריו סוגריים מרובעים ונרשום את האינדקס
+
+text[0:13]
+2. על מנת לשלוף את כלל המחרוזת נרשום את שם המשתנה ובין סוגרים מרובעים את האינדקס הראשון 0 נקודתיים האינדקס האחרון +1 
+
+text[:7]
+3. במידה והאינדקס הראשון שלי הוא 0 ארשום את שם המשתנה ובין סוגרים מרובעים ישירות ארשום נקודתיים ולאחרים את אינדקס העצירה שלי +1
+
+text[7:]
+4. במידה והאינדקס עצירה שלי הוא עד סיום המחרוזת ארשום את שם המשתנה ובין סוגריים מרובעים את אינדקס ההתחלה נקודתיים ובלי לרשום את אינדקס הסיום
+
+text[::2]
+text[1::2]
+5. על מנת לדלג על תווים במחרוזת ארשום את שם המשתנה ובין סוגריים מרובעים את אינדקס ההתחלה:אינדקס הסיום:את הקפיצה הרצויה
 ---
 
 ### 🧠 מה נלמד כאן?
