--- a/01_basics/02.0_syntax.md
+++ b/01_basics/02.0_syntax.md
@@ -46,7 +46,7 @@ print("This will be printed")
 - היא בעלת 3 שימושים
 1. הסבר קצר לקוד שרשמתי
 2. לרשום משימות לעתיד
-3. לבטל שורות שרשמתי על מנת להשתמש בהם בעתיד
+3. לבטל שורות שרשמתי על מנת להשתמש בהן בעתיד
 
 ### חשיבות הרווחים (Indentation)
 ```python
