--- a/01_basics/6.0_Str_Slicing.md
+++ b/01_basics/6.0_Str_Slicing.md
@@ -37,7 +37,7 @@ text[0:13]
 
 text[:7]
 
-3. במידה והאינדקס ההתחלה שלי הוא 0 ארשום את שם המשתנה ובין סוגרים מרובעים ישירות ארשום נקודתיים ולאחרים את אינדקס העצירה שלי +1
+3. במידה והאינדקס ההתחלה שלי הוא 0 ארשום את שם המשתנה ובין סוגרים מרובעים ישירות ארשום נקודתיים ולאחר מכן את אינדקס העצירה שלי +1
 
 text[7:]
 
