--- a/01_basics/6.0_Str_Slicing.md
+++ b/01_basics/6.0_Str_Slicing.md
@@ -46,7 +46,7 @@ text[7:]
 text[::2]
 text[1::2]
 
-5. על מנת לדלג על תווים במחרוזת ארשום את שם המשתנה ובין סוגריים מרובעים את אינדקס ההתחלה:אינדקס הסיום:את הקפיצה הרצויה
+5. על מנת לדלג על תווים במחרוזת ארשום את שם המשתנה ובין סוגריים מרובעים את אינדקס ההתחלה:אינדקס הסיום+1:את הקפיצה הרצויה
 
 ---
 
