--- a/01_basics/7.0_booleans.md
+++ b/01_basics/7.0_booleans.md
@@ -13,7 +13,9 @@
 # 📘 בוליאנים – Booleans
 
 ## ✨ הסבר
-בוליאן זה סוג מידע שיכול להיות רק אחד משני דברים: **True** (אמת) או **False** (שקר).  
+בוליאן זה סוג מידע שיכול להיות רק אחד משני דברים:
+
+ **True** (אמת) או **False** (שקר).  
 
 כמו מתג של אור – או שהוא דולק או שהוא כבוי. 
 
