--- a/01_basics/8.0_Input_Function.md
+++ b/01_basics/8.0_Input_Function.md
@@ -16,7 +16,7 @@
 
 ו`input()` היא פונקציה שמאפשרת **לקבל קלט מהמשתמש** – 
 
-כלומר שהמשתמש יקליד ערך, ואנחנו נוכל להשתמש בו בתוך התוכנית.
+כלומר שהמשתמש יקליד ערך, ואנחנו נוכל להשתמש בו בתוך הקוד.
 
 
 * הפונקציה תמיד מחזירה **מחרוזת (`str`)** – גם אם המשתמש מקליד מספר.
