--- a/01_basics/01.0_introduction.md
+++ b/01_basics/01.0_introduction.md
@@ -19,13 +19,6 @@
 
 פייתון היא שפה קלה, ידידותית, ואפשר לעשות איתה כמעט הכל – ממש כמו לגו לעולם התכנות!
 
-## 🧠 מה נלמד בפרק הזה?
-- מה זה פייתון ולמה היא כל כך פופולרית  
-- למי פייתון מתאימה  
-- איך כותבים שורת קוד ראשונה  
-- מהו "קונסול"  
-- איך מריצים קוד פייתון  
-
 ## 🔍 הסברים ודוגמאות
 
 ### מה זה פייתון?
@@ -63,9 +56,9 @@ print("I love Python!")
 - שמרו על שמות משתנים, פונקציות וטקסטים בקוד באנגלית בלבד
 
 ## ✅ בדוק את עצמך
-1. מה עושה הפונקציה `print()`?  
-2. מה ההבדל בין מחרוזת לבין מספר?  
-3. מה יקרה אם תכתבו `print(Hello)` בלי גרשיים?
+1. מה זה פייתון ולמה דווקא פייתון
+2. מהי ריצת קוד?  
+3. מה יקרה אם תכתבו `print(Hello)` בהקשר לריצת הקוד בלי גרשיים?
 
 <!-- DC_FOOTER_START -->
 ---
