--- a/01_basics/02.0_syntax.md
+++ b/01_basics/02.0_syntax.md
@@ -21,12 +21,6 @@
 
 אם לא – מקבלים שגיאה מהמחשב.
 
-## 🧠 מה נלמד בפרק הזה?
-- איך נראית שורת קוד תקינה בפייתון  
-- מה ההבדל בין שורת קוד לשורת הערה  
-- למה רווחים חשובים מאוד (indentation)  
-- מהי התחלה תקינה של קובץ פייתון  
-
 ## 🔍 הסברים ודוגמאות
 
 ### שורת קוד פשוטה
@@ -34,42 +28,26 @@
 print("Welcome to Python!")
 ```
 
-### הערות בקוד
-```python
-# This is a comment
-print("This will be printed")
-```
-
-## תגובה
+### תגובה - הערות בקוד
 - תגובה זוהי שורה כחלק מקוד הפייתון שלא רצה/עובדת כחלק מהקוד
 - היא מתחילה תמיד בסולמית/אשתג
 - היא בעלת 3 שימושים
 1. הסבר קצר לקוד שרשמתי
 2. לרשום משימות לעתיד
 3. לבטל שורות שרשמתי על מנת להשתמש בהן בעתיד
-
-### חשיבות הרווחים (Indentation)
 ```python
-if 5 > 2:
-    print("Five is greater than two")
-```
-
-### טעות נפוצה – בלי רווח
-```python
-# This will cause an error
-# if 5 > 2:
-# print("This line is not indented")
+# This is a comment
+print("This will be printed")
 ```
 
 ## 💡 טיפים מתקדמים
-- אין צורך בסימן `;` בסוף שורות – פייתון לא אוהבת את זה  
 - הערות הן רק בשביל בני אדם – המחשב מתעלם מהן  
 - רווחים לא נכונים = קוד לא עובד. שמרו על מבנה מדויק!  
 
 ## ✅ בדוק את עצמך
-1. מה קורה אם אין רווח אחרי נקודתיים?  
+1. מה זה סיינטקס בפייתון?  
 2. האם אפשר לכתוב קוד בעברית?  
-3. מה ההבדל בין `#` לבין `print()`?
+3. מה התפקיד של תגובה בפייתון?
 
 <!-- DC_FOOTER_START -->
 ---
