--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -25,38 +25,22 @@
 
 זאת אומרת ששם המשתנה text והמשתנה Text הם יהיו 2 משתנים שונים לגמרי
 
-## 🧠 מה נלמד בפרק הזה?
-- איך יוצרים משתנה  
-- איך נותנים ערכים למשתנים  
-- מהם סוגי הנתונים הבסיסיים  
-- איך משתמשים במשתנה בקוד  
-
 ## 🔍 הסברים ודוגמאות
 
 ### יצירת משתנה עם טקסט
 ```python
-name = "Dvir"
+user_name = "Dvir"
 ```
 
 ### יצירת משתנה עם מספר
 ```python
-age = 24
+user_age = 24
 ```
 
 ### הדפסת משתנים
 ```python
-print(name)
-print(age)
-```
-
-### שרשור מחרוזות עם משתנים
-```python
-print("My name is " + name)
-```
-
-### שימוש בפסיקים (שיטה נוספת)
-```python
-print("I am", age, "years old")
+print(user_name)
+print(user_age)
 ```
 
 ## 💡 טיפים מתקדמים
@@ -66,8 +50,8 @@ print("I am", age, "years old")
 
 ## ✅ בדוק את עצמך
 1. מהו משתנה?  
-2. האם מותר לקרוא למשתנה בשם `5value`?  
-3. מה ההבדל בין `+` לבין `,` בהדפסה של משתנים?
+2. מה החוקים לשים שם משתנה?  
+3. שאלה קשה איפה שמות המשתנים נשמרים במחשב?
 
 <!-- DC_FOOTER_START -->
 ---
