Update formatting in 4.0_data_types.md
Fixed formatting and punctuation in the data types section.

--- a/01_basics/4.0_data_types.md
+++ b/01_basics/4.0_data_types.md
@@ -17,12 +17,7 @@
 
 בפייתון, מספרים הם סוג אחד,טקסט, בוליאנים, רשימות ,סטים, מילונים, טאפלים הם סוג אחר לגמרי.
 
-אם נזהה נכון את הסוג – נוכל לעשות איתו בדיוק את התפקיד שלו.
-
-## 🧠 מה נלמד בפרק הזה?
-- מהם הסוגים הבסיסיים של נתונים בפייתון  
-- איך בודקים את הסוג של משתנה  
-- מה מותר ומה אסור לעשות עם כל סוג  
+אם נזהה נכון את הסוג – נוכל לעשות איתו בדיוק את התפקיד שלו. 
 
 ## 🔍 הסברים ודוגמאות
 
@@ -63,7 +58,8 @@ print("Age: " + str(25))  # OK!
 - חשוב לדעת מהו הסוג של כל משתנה לפני שמבצעים עליו פעולות  
 - `True` ו־`False` תמיד נכתבים עם אות גדולה באנגלית  
 
-## ✅ בדוק את עצמך
+##✅ בדוק את עצמך
+0. מה הם כל סוגי המשנים?
 1. מה ההבדל בין int ל־float?  
 2. מה יקרה אם תנסו לחבר בין string למספר בלי להמיר?  
 3. מהו הפלט של `type("hello")`?
