Edit numbers.md for clarity and quiz updates
Removed redundant text and updated quiz question.

--- a/01_basics/5.0_numbers.md
+++ b/01_basics/5.0_numbers.md
@@ -15,13 +15,7 @@
 ## ✨ הסבר
 מספרים הם אחת מהשפות הכי פשוטות שהמחשב מבין.  
 אם אנחנו רוצים לעשות חישובים כמו חיבור, חיסור, כפל או חילוק – פייתון תעשה את זה בשבילנו.  
-רק צריך לכתוב את זה נכון, כמו במחשבון.
-
-## 🧠 מה נלמד בפרק הזה?
-- מה ההבדל בין מספרים שלמים לעשרוניים  
-- פעולות חשבון בסיסיות בפייתון  
-- איך מבצעים חישובים עם משתנים  
-- שימוש בפונקציות `int()`, `float()`
+רק צריך לכתוב את זה נכון, כמו במחשבון.`
 
 ## 🔍 הסברים ודוגמאות
 
@@ -64,7 +58,7 @@ print(int(x) + 3)  # Converts string to int before adding
 ## ✅ בדוק את עצמך
 1. מה ההבדל בין `/` לבין `//`?  
 2. מה עושה `**` בפייתון?  
-3. מה ההבדל בין `int("5")` ל־`"5"`?
+3. מה זה מודולו?
 
 <!-- DC_FOOTER_START -->
 ---
