Rename variables for user context in examples

--- a/01_basics/4.0_data_types.md
+++ b/01_basics/4.0_data_types.md
@@ -23,13 +23,13 @@
 
 ### מספרים (Integers ו-Floats)
 ```python
-age = 25        # Integer שלמים
-height = 1.75   # Float עשרונים
+user_age = 25        # Integer שלמים
+user_height = 1.75   # Float עשרונים
 ```
 
 ### מחרוזות (Strings) טקסט 
 ```python
-name = "Dvir"
+user_name = "Dvir"
 # כל דבר בין זוג גרשיים
 ```
 
@@ -41,9 +41,9 @@ is_student = True
 
 ### בדיקת סוג הנתון
 ```python
-print(type(age))        # <class 'int'>
-print(type(height))     # <class 'float'>
-print(type(name))       # <class 'str'>
+print(type(user_age))        # <class 'int'>
+print(type(user_height))     # <class 'float'>
+print(type(user_name))       # <class 'str'>
 print(type(is_student)) # <class 'bool'>
 ```
 
