Refactor variable names and examples in strings.md
Updated variable names and examples in the strings chapter.

--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -15,19 +15,13 @@
 ## ✨ הסבר
 מחרוזת היא כל דבר שכתוב עם אותיות, מילים או תווים מספרים כל דבר שנמצא בין גרשיים – כמו שם, משפט, או אפילו רווח.  
 בפייתון אנחנו כותבים מחרוזות בתוך גרשיים, וככה המחשב יודע שזה טקסט ולא מספר.
-- אנחנו נשתמש בפונקציות שישנו שיעדכנו את הטקסט הקיים בשם המשתנה שערכו מסוג טקסט
-
-## 🧠 מה נלמד בפרק הזה?
-- איך יוצרים מחרוזת  
-- פעולות בסיסיות על מחרוזות  
-- חיבור מחרוזות  
-- שימוש בפונקציות כמו `len()`, `upper()`, `lower()`, `strip()`, `replace()` ועוד  
+- אנחנו נשתמש בפונקציות שישנו שיעדכנו את הטקסט הקיים בשם המשתנה שערכו מסוג טקסט 
 
 ## 🔍 הסברים ודוגמאות
 
 ### יצירת מחרוזת
 ```python
-name = "Dvir"
+user_name = "Dvir"
 ```
 
 ### חיבור מחרוזות
@@ -42,22 +36,22 @@ print(f"{first} {second} How are you today?")  # Hello World
 
 ### אורך מחרוזת
 ```python
-text = "Python"
-print(len(text))  # 6
+text = "I love python"
+print(len(text))  # 13
 ```
 
 ## פונקציות של טקסט
 
 ### אותיות גדולות/קטנות
 ```python
-print(text.upper())  # PYTHON
-print(text.lower())  # python
+print(text.upper())  # I LOVE PYTHON
+print(text.lower())  # i love python
 ```
 
 ### הסרת רווחים
 ```python
-text = "  hello  "
-print(text.strip())  # "hello"
+text1 = "  hello  "
+print(text1.strip())  # "hello"
 ```
 
 ### החלפה במחרוזת
