Fix text function description in Hebrew strings guide

--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -15,7 +15,7 @@
 ## ✨ הסבר
 מחרוזת היא כל דבר שכתוב עם אותיות, מילים או תווים מספרים כל דבר שנמצא בין גרשיים – כמו שם, משפט, או אפילו רווח.  
 בפייתון אנחנו כותבים מחרוזות בתוך גרשיים, וככה המחשב יודע שזה טקסט ולא מספר.
-- אנחנו נשתמש בפונקציות שישנו שיעדכנו את הטקסט הקיים בשם המשתנה שערכו מסוג טקסט 
+- אנחנו נשתמש בפונקציות של טקסט, שישנו(שיעדכנו) את הטקסט הקיים השמור בשם המשתנה שערכו מסוג טקסט 
 
 ## 🔍 הסברים ודוגמאות
 
