Update string length section in 6.00_strings.md
Added explanation of string length in Hebrew.

--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -34,7 +34,7 @@ print(first, second)  # Hello World
 print(f"{first} {second} How are you today?")  # Hello World
 ```
 
-### אורך מחרוזת
+### אורך מחרוזת - כמה תווים יש במחרוזת
 ```python
 text = "I love python"
 print(len(text))  # 13
