--- a/01_basics/8.0_Input_Function.md
+++ b/01_basics/8.0_Input_Function.md
@@ -19,9 +19,9 @@
 כלומר שהמשתמש יקליד ערך, ואנחנו נוכל להשתמש בו בתוך הקוד.
 
 
-* הפונקציה תמיד מחזירה **מחרוזת (`str`)** – גם אם המשתמש מקליד מספר.
+* הפונקציה תמיד מחזירה **מחרוזת** – גם אם המשתמש מקליד מספר.
   *
-* ניתן לשים בתוך `input()` טקסט, כדי להציג שאלה או בקשה מהמשתמש.
+* ניתן לשים בתוך אינפוט טקסט, כדי להציג שאלה או בקשה מהמשתמש.
 
 ---
 
