--- a/01_basics/8.0_Input_Function.md
+++ b/01_basics/8.0_Input_Function.md
@@ -20,8 +20,8 @@
 
 
 * הפונקציה תמיד מחזירה **מחרוזת** – גם אם המשתמש מקליד מספר.
-  *
-* ניתן לשים בתוך אינפוט טקסט, כדי להציג שאלה או בקשה מהמשתמש.
+  
+* ניתן לשים בתוך אינפוט טקסט, כדי להציג שאלה או בקשה להמשתמש.
 
 ---
 
