--- a/01_basics/8.0_Input_Function.md
+++ b/01_basics/8.0_Input_Function.md
@@ -18,7 +18,7 @@
 
 כלומר שהמשתמש יקליד ערך, ואנחנו נוכל להשתמש בו בתוך הקוד
 
-הפונקציה תמיד מחזירה **מסוג של מחרוזת** – גם אם המשתמש מקליד מספר
+הפונקציה תמיד מחזירה קלט **מסוג של מחרוזת** – גם אם המשתמש מקליד מספר, אלא אם כן המרנו לסוג אחר
 
 ניתן לשים בתוך אינפוט טקסט, כדי להציג שאלה או בקשה להמשתמש
 
