Simplify explanation of operators in documentation
Removed redundant explanation about operators and simplified the text.

--- a/02_operators/8.0_operators.md
+++ b/02_operators/8.0_operators.md
@@ -13,13 +13,8 @@
 # 📘 אופרטורים – Operators
 
 ## ✨ הסבר
-אופרטורים הם הסימנים הקטנים שעוזרים לנו להגיד למחשב מה לעשות – כמו `+` לחיבור או `==` להשוואה.  
-הם כמו סימנים מתמטיים או לוגיים, והמחשב משתמש בהם כדי להבין מה אנחנו רוצים לחשב או לבדוק.
-
-## 🧠 מה נלמד בפרק הזה?
-- סוגים שונים של אופרטורים בפייתון  
-- פעולות מתמטיות, השוואה, לוגיקה, חברות וזהות  
-- איך משתמשים באופרטורים בתוך תנאים וביטויים  
+אופרטורים הם סימנים מתמטיים כמו `+` לחיבור או `==` להשוואה.  
+הם כמו סימנים מתמטיים או לוגיים, והמחשב משתמש בהם כדי להבין מה אנחנו רוצים לחשב או לבדוק. 
 
 ## 🔍 הסברים ודוגמאות
 
