--- a/02_operators/9.0_Logic_Gates_Explained.md
+++ b/02_operators/9.0_Logic_Gates_Explained.md
@@ -23,15 +23,6 @@
 
 ---
 
-### 🧠 מה נלמד בפרק הזה?
-
-* מהם השערים הלוגיים הבסיסיים הקיימים
-* טבלת אמת לכל שער – מה הוא מחזיר בהתאם לקלט
-* איך ליישם שערים לוגיים בקוד (Python או חומרה)
-* דוגמאות שימוש: תנאים, אלגוריתמים, אלקטרוניקה
-
----
-
 ### 🔍 הסברים ודוגמאות
 
 #### 🟩 שער NOT (נגדי)
@@ -197,10 +188,9 @@ not (A ^ B)
 ---
 
 ### ✅ בדוק את עצמך
-
-* מה ההבדל בין OR ל־XOR?
-* מתי התוצאה של NAND תהיה אפס?
-* איך ניתן לבנות שער XOR עם שערי AND, OR, ו־NOT בלבד?
+1. מה ההבדל בין OR ל־XOR?
+2. מתי התוצאה של NAND תהיה אפס?
+3. איך ניתן לבנות שער XOR עם שערי AND, OR, ו־NOT בלבד?
 
 <!-- DC_FOOTER_START -->
 ---
