Update questions in Indentation.md

--- a/03_control_flow/00.0_Indentation.md
+++ b/03_control_flow/00.0_Indentation.md
@@ -141,8 +141,7 @@ for i in range(3):
 
 1. מה קורה אם אין רווח אחרי תנאי `if`?
 2. כמה רווחים מומלץ להשתמש?
-3. מה הקשר בין רווחים לסוגריים בשפות אחרות?
-4. באילו סוגי מבנים חובה להשתמש בהזחה?
+3. מתי חובה להשתמש בהזחה?
 
 <!-- DC_FOOTER_START -->
 
