Revise content in while loops chapter
Removed bullet points from the section on what will be learned in the chapter.

--- a/03_control_flow/02.0_while_loops.md
+++ b/03_control_flow/02.0_while_loops.md
@@ -14,13 +14,7 @@
 
 ## ✨ הסבר
 לפעמים אנחנו רוצים שמשהו יחזור על עצמו שוב ושוב – כל עוד תנאי מסוים מתקיים.  
-כמו: "כל עוד לא הגעת ל-10, תמשיך לספור". בשביל זה יש לנו לולאת while!
-
-## 🧠 מה נלמד בפרק הזה?
-- איך כותבים לולאת while  
-- מהו תנאי העצירה  
-- איך לעדכן משתנים בתוך הלולאה  
-- שימוש ב־`break` ו־`continue`
+כמו: "כל עוד לא הגעת ל-10, תמשיך לספור". בשביל זה יש לנו לולאת while!`
 
 ## 🔍 הסברים ודוגמאות
 
