Refactor for loops explanation in markdown
Removed redundant text and adjusted formatting.

--- a/03_control_flow/03.0_for_loops.md
+++ b/03_control_flow/03.0_for_loops.md
@@ -14,13 +14,7 @@
 
 ## ✨ הסבר 
 לפעמים אנחנו רוצים לעבור על דברים אחד אחד – למשל, כל המספרים מ־1 עד 10, או כל האותיות במילה.  
-לולאת `for` עוזרת לנו לעשות בדיוק את זה – היא יודעת "לרוץ" על כל פריט ולבצע עליו פעולה.
-
-## 🧠 מה נלמד בפרק הזה?
-- מבנה בסיסי של לולאת `for`  
-- שימוש עם `range()`  
-- מעבר על מחרוזות ורשימות  
-- שימוש ב־`break`, `continue` ו־`else` בתוך `for`
+לולאת `for` עוזרת לנו לעשות בדיוק את זה – היא יודעת "לרוץ" על כל פריט ולבצע עליו פעולה.`
 
 ## 🔍 הסברים ודוגמאות
 
