Improve formatting of enumerate() usage explanation
Reformat the explanation of using enumerate() in Python for better clarity.

--- a/03_control_flow/03.0_for_loops.md
+++ b/03_control_flow/03.0_for_loops.md
@@ -68,7 +68,11 @@ else:
     print("Finished loop!")
 ```
 
-### שימוש ב- enumerate() בפייתון מאפשרת לך גם לקבל את האינדקס וגם את הערך של כל איבר ברשימה בלולאה — מבלי להשתמש ב־range(len(...)).
+### שימוש ב- enumerate() 
+
+בפייתון מאפשרת לך גם לקבל את האינדקס וגם את הערך של כל איבר ברשימה בלולאה 
+
+מבלי להשתמש ב־range(len(...)).
 
 ```python
 fruits = ["apple", "banana", "cherry"]
