Clean up tuples.md content and formatting
Removed unnecessary bullet points and fixed formatting.

--- a/04_collections/02.0_tuples.md
+++ b/04_collections/02.0_tuples.md
@@ -16,13 +16,7 @@
 
 טאפלה היא כמו רשימה – רק שאי אפשר לשנות אותה.  
 כלומר, ברגע שיצרנו אותה, אי אפשר להוסיף, למחוק או לשנות את הפריטים שבה.  
-היא מתאימה למקרים שבהם אנחנו רוצים שמידע יישאר קבוע לאורך כל התוכנית.
-
-## 🧠 מה נלמד בפרק הזה?
-- איך יוצרים טאפלה
-- איך לגשת לפריטים בטאפלה
-- ההבדלים בין טאפלה לרשימה
-- מתי כדאי להשתמש בטאפלה
+היא מתאימה למקרים שבהם אנחנו רוצים שמידע יישאר קבוע לאורך כל התוכנית.ה
 
 ## 🔍 הסברים ודוגמאות
 
