Update explanation section in 03.0_sets.md
Removed bullet points from the section about what will be learned in this chapter.

--- a/04_collections/03.0_sets.md
+++ b/04_collections/03.0_sets.md
@@ -16,13 +16,7 @@
 
 קבוצה היא אוסף של פריטים **שאין בהם כפילויות**.  
 הסדר לא חשוב, ואי אפשר לגשת לפריט לפי אינדקס.  
-היא שימושית כשרוצים לבדוק אם משהו קיים, או כשצריך להסיר כפילויות מרשימה.
-
-## 🧠 מה נלמד בפרק הזה?
-- איך יוצרים קבוצה
-- איך מוסיפים ומסירים פריטים
-- איך בודקים אם פריט נמצא בקבוצה
-- פעולות מתמטיות בין קבוצות (איחוד, חיתוך וכו')
+היא שימושית כשרוצים לבדוק אם משהו קיים, או כשצריך להסיר כפילויות מרשימה.)
 
 ## 🔍 הסברים ודוגמאות
 
