--- a/04_collections/00.1_set_methods.md
+++ b/04_collections/00.1_set_methods.md
@@ -14,94 +14,177 @@
 
 ## ✨ הסבר
 
-קבוצות ב־Python הן מבנה נתונים חשוב להסרת כפילויות, בדיקת קיום, ופעולות בין קבוצות.  
-המתודות שלהן פשוטות אבל עוצמתיות – הנה כל מה שצריך לדעת במקום אחד.
-
-## 🧠 מה נלמד בפרק הזה?
-- שימוש בכל מתודות `set`
-- מה ההבדלים בין פעולות דומות (`remove` מול `discard`)
-- איך לבצע פעולות מתמטיות בין קבוצות
+קבוצות (`set`) ב־Python הן מבנה נתונים ייחודי להסרת כפילויות, בדיקת קיום, ופעולות מתמטיות בין קבוצות.  
+הן מהירות, גמישות, ומושלמות כשלא חשוב לנו הסדר אלא **עצם קיום הערכים**.
 
 ## 🔍 הסברים ודוגמאות
 
 ### `add(item)`
-- מוסיף פריט לקבוצה  
-- אם הפריט כבר קיים – לא קורה כלום
+```python
+# Add item to the set
+colors = {"red", "green"}
+colors.add("blue")  # {'red', 'green', 'blue'}
+````
 
 ### `remove(item)`
-- מסיר פריט מהקבוצה  
-- אם הפריט לא קיים – נזרקת שגיאה `KeyError`
+
+```python
+# Remove item from set
+colors = {"red", "green", "blue"}
+colors.remove("green")  # {'red', 'blue'}
+# KeyError if item doesn't exist
+```
 
 ### `discard(item)`
-- מסיר פריט אם הוא קיים  
-- אם הפריט לא קיים – **לא נזרקת שגיאה**
+
+```python
+# Remove item if it exists (no error if not)
+colors = {"red", "green"}
+colors.discard("blue")  # No error even if 'blue' not found
+```
 
 ### `pop()`
-- מסיר פריט אקראי ומחזיר אותו  
-- אם הקבוצה ריקה – תיזרק שגיאה
+
+```python
+# Remove and return a random item
+numbers = {1, 2, 3}
+item = numbers.pop()  # Removes random element
+```
 
 ### `clear()`
-- מוחק את כל הפריטים בקבוצה
+
+```python
+# Remove all items from the set
+numbers = {1, 2, 3}
+numbers.clear()  # set()
+```
 
 ### `copy()`
-- יוצר עותק שטוח של הקבוצה
+
+```python
+# Create a shallow copy of the set
+a = {1, 2, 3}
+b = a.copy()  # {1, 2, 3}
+```
 
 ### `union(set2)` / `|`
-- מחזיר קבוצה עם כל הפריטים מכל הקבוצות (איחוד)
+
+```python
+# Combine all unique items from both sets
+a = {1, 2}
+b = {2, 3}
+print(a.union(b))  # {1, 2, 3}
+print(a | b)       # Same result
+```
 
 ### `intersection(set2)` / `&`
-- מחזיר רק את הפריטים שמשותפים לכל הקבוצות (חיתוך)
+
+```python
+# Items common to both sets
+a = {1, 2, 3}
+b = {2, 3, 4}
+print(a.intersection(b))  # {2, 3}
+print(a & b)              # Same result
+```
 
 ### `difference(set2)` / `-`
-- מחזיר רק את הפריטים שנמצאים בקבוצה הראשונה ולא בשנייה
+
+```python
+# Items in a but not in b
+a = {1, 2, 3}
+b = {2, 4}
+print(a.difference(b))  # {1, 3}
+print(a - b)            # Same result
+```
 
 ### `symmetric_difference(set2)` / `^`
-- מחזיר את כל הפריטים שנמצאים באחת מהקבוצות – אבל לא בשתיהן יחד
+
+```python
+# Items in either set, but not both
+a = {1, 2, 3}
+b = {2, 4}
+print(a.symmetric_difference(b))  # {1, 3, 4}
+print(a ^ b)                      # Same result
+```
 
 ### `update(set2)`
-- מוסיף לקבוצה הנוכחית את כל הפריטים מהקבוצה השנייה
+
+```python
+# Add all items from another set
+a = {1, 2}
+b = {2, 3}
+a.update(b)  # a becomes {1, 2, 3}
+```
 
 ### `intersection_update(set2)`
-- משאיר בקבוצה רק את הפריטים שמשותפים
+
+```python
+# Keep only shared items
+a = {1, 2, 3}
+b = {2, 4}
+a.intersection_update(b)  # a = {2}
+```
 
 ### `difference_update(set2)`
-- מוחק מהקבוצה את כל מה שמופיע גם בקבוצה השנייה
+
+```python
+# Remove items found in another set
+a = {1, 2, 3}
+b = {2, 4}
+a.difference_update(b)  # a = {1, 3}
+```
 
 ### `symmetric_difference_update(set2)`
-- משאיר רק את הפריטים שמופיעים באחת הקבוצות – אבל לא בשתיהן
+
+```python
+# Keep only items that appear in one of the sets, not both
+a = {1, 2, 3}
+b = {2, 4}
+a.symmetric_difference_update(b)  # a = {1, 3, 4}
+```
+
+---
 
 ## 💡 טיפים מתקדמים
 
-* לפעולות כמו `union`, `intersection` קיימות גם גרסאות עם סימנים (`|`, `&`) – הן יותר קצרות.
-* תמיד בדוק אם אתה רק מחזיר תוצאה (כמו `a | b`) או משנה את הקבוצה עצמה (`a.update(b)`).
-* שימוש נפוץ: `set(my_list)` כדי להסיר כפילויות.
+* `set()` משמש להסרת כפילויות מרשימה:
+
+  ```python
+  names = ["Avi", "Dana", "Avi"]
+  unique = set(names)  # {'Avi', 'Dana'}
+  ```
+* פעולות כמו `|`, `&`, `-`, `^` נוחות כשמבצעים פעולות מתמטיות על קבוצות.
+* השתמש ב־`update()` כשאתה רוצה לשנות את הקבוצה עצמה – ולא רק להחזיר תוצאה.
+
+---
 
 ## ✅ בדוק את עצמך
 
-1. באיזו מתודה תשתמש כדי להסיר פריט בלי להיתקל בשגיאה אם הוא לא קיים?
-2. מה ההבדל בין `a | b` ל־`a ^ b`?
-3. איך מנקים קבוצה לחלוטין?
+1. באיזו מתודה תשתמש כדי להסיר פריט בלי לקבל שגיאה אם הוא לא קיים?
+2. מה ההבדל בין `union()` ל־`update()`?
+3. כיצד נוכל להשוות בין שתי קבוצות ולמצוא רק את הפריטים השונים ביניהן?
+4. איך נוכל להסיר כפילויות מרשימה בעזרת `set()`?
 
 <!-- DC_FOOTER_START -->
+
 ---
 
 <div align="center">
 
-✨ **Thank you for learning with Dvir Cabessa** ✨  
-✨ **תודה שלמדתם עם דביר קבסה** ✨  
+✨ **Thank you for learning with Dvir Cabessa** ✨
+✨ **תודה שלמדתם עם דביר קבסה** ✨
 
-📘 *All Rights Reserved © Dvir Cabessa 2025*  
-📘 *כל הזכויות שמורות © דביר קבסה 2025*  
+📘 *All Rights Reserved © Dvir Cabessa 2025*
+📘 *כל הזכויות שמורות © דביר קבסה 2025*
 
-🔗 *For educational purposes only – copying or distribution without permission is prohibited.*  
+🔗 *For educational purposes only – copying or distribution without permission is prohibited.*
 🔗 *החומר נועד לשימוש חינוכי בלבד — אין להעתיק או להפיץ ללא אישור.*
 
 ---
 
-> _"Education is the art of awakening curiosity and guiding it toward creation."_  
-> _"החינוך הוא אמנות המעירה את הסקרנות ומכוונת אותה ליצירה."_  
+> *"Education is the art of awakening curiosity and guiding it toward creation."*
+> *"החינוך הוא אמנות המעירה את הסקרנות ומכוונת אותה ליצירה."*
 > — **Dvir Cabessa**
 
 </div>
 <!-- DC_FOOTER_END -->
-
