Fix text and formatting in dictionaries.md
Corrected text and formatting in the dictionaries section.

--- a/04_collections/04.1_dictionaries.md
+++ b/04_collections/04.1_dictionaries.md
@@ -18,14 +18,7 @@
 בכל כיס אתה שם פתק עם שם (המפתח) ופתק נוסף עם משהו שקשור אליו (הערך).  
 לדוגמה – השם "אמא" והמילה "מתכונים".  
 כך בדיוק עובד מילון בפייתון: לכל "מפתח" יש "ערך" שמחובר אליו.  
-אפשר להכניס, לשלוף, לעדכן או למחוק פריטים – לפי שם המפתח.
-
-## 🧠 מה נלמד בפרק הזה?
-- איך יוצרים מילון
-- איך לשלוף או לעדכן ערכים
-- איך להוסיף ולמחוק פריטים
-- איך לעבור על כל המפתחות והערכים
-- כלים חשובים לעבודה עם מילונים
+אפשר להכניס, לשלוף, לעדכן או למחוק פריטים – לפי שם המפתח.ם
 
 ## 🔍 הסברים ודוגמאות
 
