Refactor import explanation in documentation
Removed redundant text and cleaned up section on importing modules.

--- a/07_modules/01.0_import.md
+++ b/07_modules/01.0_import.md
@@ -16,13 +16,7 @@
 
 פייתון מלאה בכלים מוכנים מראש – ממש כמו קופסת לגו ענקית!  
 אבל לא כל הקוביות באות כבר פתוחות – חלק מהן צריך **לייבא**.  
-כשאנחנו רוצים להשתמש בכלי כזה (למשל חישובים מתמטיים, עבודה עם זמן, קבצים ועוד) – אנחנו עושים `import`.
-
-## 🧠 מה נלמד בפרק הזה?
-- איך מייבאים מודולים מובנים
-- איך משתמשים בפונקציות מתוך מודול
-- מה ההבדל בין `import`, `from`, ו־`as`
-- דוגמאות נפוצות: `math`, `random`, `datetime`
+כשאנחנו רוצים להשתמש בכלי כזה (למשל חישובים מתמטיים, עבודה עם זמן, קבצים ועוד) – אנחנו עושים `import`.`
 
 ## 🔍 הסברים ודוגמאות
 
