Clean up file handling section in documentation
Removed redundant bullet points from the section on file handling.

--- a/08_file_handling/01.0_file_open.md
+++ b/08_file_handling/01.0_file_open.md
@@ -15,13 +15,7 @@
 ## ✨ הסבר
 
 כשאנחנו עובדים עם קבצים בפייתון, אנחנו בעצם “פותחים דלת” לקובץ, עושים בו משהו – ואז **סוגרים** את הדלת.  
-אפשר לקרוא, לכתוב או להוסיף לקובץ – אבל תמיד צריך לדעת **איך** לפתוח אותו בצורה נכונה.
-
-## 🧠 מה נלמד בפרק הזה?
-- איך פותחים קובץ לקריאה, כתיבה או הוספה
-- מה זה `open()` ואיך משתמשים בו
-- מה ההבדל בין `r`, `w`, `a`
-- למה חשוב לסגור את הקובץ עם `close()` או `with`
+אפשר לקרוא, לכתוב או להוסיף לקובץ – אבל תמיד צריך לדעת **איך** לפתוח אותו בצורה נכונה.`
 
 ## 🔍 הסברים ודוגמאות
 
