--- a/01_basics/4.0_data_types.md
+++ b/01_basics/4.0_data_types.md
@@ -15,7 +15,7 @@
 ## ✨ הסבר
 לכל דבר שאנחנו שומרים בפייתון יש סוג – כמו ש- "מים" הם נוזל, ו "אבן" היא מוצק.  
 
-בפייתון, מספרים הם סוג אחד,טקסט, בוליאנים, רשימות ,סטים, מילונים, טאפלים הם סוג אחר לגמרי.
+בפייתון, יש המון סוגים שונים: מספרים, טקסט, בוליאנים, רשימות ,סטים, מילונים, וטאפלים הם סוגים של נתונים.
 
 אם נזהה נכון את הסוג – נוכל לעשות איתו בדיוק את התפקיד שלו. 
 
