--- a/03_control_flow/00.0_Indentation.md
+++ b/03_control_flow/00.0_Indentation.md
@@ -13,7 +13,7 @@
 # 📘 חשיבות הרווחים – Indentation
 
 ## ✨ הסבר
-בפייתון, **הרווחים (Indentation)** הם לא רק עניין של עיצוב — הם חלק מהתחביר עצמו.  
+בפייתון, **הרווחים ** הם לא רק עניין של עיצוב — הם חלק מהתחביר עצמו.  
 הם אומרים למחשב *מה שייך למה*.  
 
 אם לא תכניסו רווחים נכונים, הקוד פשוט לא יעבוד.  
