--- a/03_control_flow/00.0_Indentation.md
+++ b/03_control_flow/00.0_Indentation.md
@@ -19,6 +19,8 @@
 אם לא תכניסו רווחים נכונים, הקוד פשוט לא יעבוד.  
 במילים אחרות – **הרווחים הם כמו סוגריים בשפות אחרות.**
 
+הם ישמשו אותנו בתנאים, בלולאות בפונקציות ובקלאסים
+
 ## 🔍 הסברים ודוגמאות
 
 ### דוגמה תקינה
