--- a/03_control_flow/00.0_Indentation.md
+++ b/03_control_flow/00.0_Indentation.md
@@ -17,7 +17,7 @@
 הם אומרים למחשב *מה שייך למה*.  
 
 אם לא תכניסו רווחים נכונים, הקוד פשוט לא יעבוד.  
-במילים אחרות – **הרווחים הם כמו סוגריים דגולות ל **
+במילים אחרות – **הרווחים הם כמו סוגריים גדולות ל **
 
 הם ישמשו אותנו בתנאים, בלולאות בפונקציות ובקלאסים
 
