--- a/03_control_flow/01.0_if_else.md
+++ b/03_control_flow/01.0_if_else.md
@@ -13,7 +13,7 @@
 # 📘 תנאים – If...Else
 
 ## ✨ הסבר 
-לפעמים אנחנו רוצים שהמחשב יבחר מה לעשות – אם משהו נכון, אז תעשה פעולה מסוימת, ואם לא – תעשה משהו אחר.  
+לפעמים אנחנו רוצים שהמחשב יבחר מה לעשות – אם משהו נכון, אז תעשה פעולה מסוימת, ואחרת – תעשה משהו אחר.  
 בדיוק כמו שאמא אומרת: "אם סיימת את שיעורי הבית – תלך לשחק, אחרת תישאר בבית".   
 נרשום נקודתיים לאחר סיום של כל תנאי וברדיו שורה נעשה הזחה
 
