--- a/03_control_flow/01.0_if_else.md
+++ b/03_control_flow/01.0_if_else.md
@@ -15,7 +15,7 @@
 ## ✨ הסבר 
 לפעמים אנחנו רוצים שהמחשב יבחר מה לעשות – אם משהו נכון, אז תעשה פעולה מסוימת, ואחרת – תעשה משהו אחר.  
 בדיוק כמו שאמא אומרת: "אם סיימת את שיעורי הבית – תלך לשחק, אחרת תישאר בבית".   
-נרשום נקודתיים לאחר סיום של כל תנאי וירידת שורה נעשה הזחה
+נרשום נקודתיים לאחר סיום של כל תנאי וירידת שורה נעשה הזחה ונרשום מה יקרה
 
 ## 🔍 הסברים ודוגמאות
 
