--- a/03_control_flow/02.0_while_loops.md
+++ b/03_control_flow/02.0_while_loops.md
@@ -16,6 +16,8 @@
 לפעמים אנחנו רוצים שמשהו יחזור על עצמו שוב ושוב – כל עוד תנאי מסוים מתקיים.  
 כמו: "כל עוד לא הגעת ל-10, תמשיך לספור". בשביל זה יש לנו לולאת while!`
 
+אנחנו עושים לולאה על מנת לא לחוץ בכל פעם מחדש על התחל
+
 ## 🔍 הסברים ודוגמאות
 
 ### לולאה בסיסית
