--- a/03_control_flow/02.0_while_loops.md
+++ b/03_control_flow/02.0_while_loops.md
@@ -1,3 +1,4 @@
+
 <!-- DC_HEADER_START -->
 <div align="center">
 
@@ -17,6 +18,11 @@
 כמו: "כל עוד לא הגעת ל-10, תמשיך לספור". בשביל זה יש לנו לולאת while!`
 
 אנחנו עושים לולאה על מנת לא לחוץ בכל פעם מחדש על התחל
+
+### טבלת מעקב
+כאשר אנחנו נמצאים בתוך לולאה, נרצה לעקוב כיצד המשתנים שלנו משתנים 
+וככה נוכל להבין מה קרה להם
+כל אחד מהשתנים יקבל תא בטבלה ויתעדכן בכל הרצה של הלולאה
 
 ## 🔍 הסברים ודוגמאות
 
