--- a/03_control_flow/02.0_while_loops.md
+++ b/03_control_flow/02.0_while_loops.md
@@ -17,7 +17,7 @@
 לפעמים אנחנו רוצים שמשהו יחזור על עצמו שוב ושוב – כל עוד תנאי מסוים מתקיים.  
 כמו: "כל עוד לא הגעת ל-10, תמשיך לספור". בשביל זה יש לנו לולאת while!`
 
-אנחנו עושים לולאה על מנת לא לחוץ בכל פעם מחדש על התחל
+אנחנו עושים לולאה על מנת לא ללחוץ בכל פעם מחדש על התחל
 
 ### טבלת מעקב
 כאשר אנחנו נמצאים בתוך לולאה, נרצה לעקוב כיצד המשתנים שלנו משתנים 
