--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -13,9 +13,9 @@
 # 📘טקסט – מחרוזות – Strings
 
 ## ✨ הסבר
-מחרוזת היא כל דבר שכתוב עם אותיות, מילים או תווים מספרים כל דבר שנמצא בין גרשיים – כמו שם, משפט, או אפילו רווח.  
-בפייתון אנחנו כותבים מחרוזות בתוך גרשיים, וככה המחשב יודע שזה טקסט ולא מספר.
-- אנחנו נשתמש בפונקציות של טקסט, שישנו(שיעדכנו) את הטקסט הקיים השמור בשם המשתנה שערכו מסוג טקסט 
+מחרוזת היא כל דבר שכתוב עם אותיות, מילים או תווים מספרים או אפילו רווח או כל דבר שנמצא בין גרשיים.
+בפייתון אנחנו כותבים כל דבר בתוך גרשיים, וככה המחשב יודע שזה טקסט ולא כל דבר אחר.
+- אנחנו נשתמש בפונקציות של טקסט, שישנו(שיעדכנו) את הטקסט הקיים השמור בתוך משתנה שערך שלו מסוג טקסט 
 
 ## 🔍 הסברים ודוגמאות
 
