--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -13,7 +13,7 @@
 # 📘טקסט – מחרוזות – Strings
 
 ## ✨ הסבר
-מחרוזת היא כל דבר שכתוב עם אותיות, מילים או תווים מספרים או אפילו רווח או כל דבר שנמצא בין גרשיים.
+מחרוזת היא כל דבר שכתוב עם אותיות, מילים, תווים, מספרים או אפילו רווח או כל דבר שנמצא בין גרשיים.
 בפייתון אנחנו כותבים כל דבר בתוך גרשיים, וככה המחשב יודע שזה טקסט ולא כל דבר אחר.
 - אנחנו נשתמש בפונקציות של טקסט, שישנו(שיעדכנו) את הטקסט הקיים השמור בתוך משתנה שערך שלו מסוג טקסט 
 
