--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -10,7 +10,7 @@
 ---
 <!-- DC_HEADER_END -->
 
-# 📘טקסט – מחרוזות – Strings
+# 📘טקסט – מחרוזות – Strings - STR
 
 ## ✨ הסבר
 מחרוזת היא כל דבר שכתוב עם אותיות, מילים, תווים, מספרים או אפילו רווח או כל דבר שנמצא בין גרשיים.
