--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -15,7 +15,8 @@
 ## ✨ הסבר
 מחרוזת היא כל דבר שכתוב עם אותיות, מילים, תווים, מספרים או אפילו רווח או כל דבר שנמצא בין גרשיים.
 
-בפייתון כל דבר בתוך גרשיים, וככה המחשב יודע שזה טקסט ולא כל דבר אחר.
+בפייתון כל דבר בתוך גרשיים הוא טקסט, וככה המחשב יודע להבדיל שזה טקסט ולא נגיד מספר.
+
 - אנחנו נשתמש בפונקציות של טקסט, שישנו(שיעדכנו) את הטקסט הקיים השמור בתוך משתנה שערך שלו מסוג טקסט 
 
 ## 🔍 הסברים ודוגמאות
