--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -15,7 +15,7 @@
 ## ✨ הסבר
 מחרוזת היא כל דבר שכתוב עם אותיות, מילים, תווים, מספרים או אפילו רווח או כל דבר שנמצא בין גרשיים.
 
-בפייתון כל דבר בתוך גרשיים הוא טקסט, וככה המחשב יודע להבדיל שזה טקסט ולא נגיד מספר.
+בפייתון כל דבר בתוך הגרשיים הוא טקסט, וככה המחשב יודע להבדיל שזה טקסט ולא מספר.
 
 - אנחנו נשתמש בפונקציות של טקסט, שישנו(שיעדכנו) את הטקסט הקיים הנשמר בתוך שם משתנה שערך שלו מסוג של טקסט 
 
