--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -17,7 +17,7 @@
 
 בפייתון כל דבר בתוך הגרשיים הוא טקסט, וככה המחשב יודע להבדיל שזה טקסט ולא מספר.
 
-- אנחנו נשתמש בפונקציות של טקסט, שישנו(שיעדכנו) את הטקסט הקיים הנשמר בתוך שם משתנה שערך שלו מסוג של טקסט 
+- אנחנו נשתמש בפונקציות של טקסט, שישנו(שיעדכנו) את הטקסט הקיים הנשמר בתוך שם משתנה שהערך שלו מסוג של טקסט 
 
 ## 🔍 הסברים ודוגמאות
 
