--- a/01_basics/6.00_strings.md
+++ b/01_basics/6.00_strings.md
@@ -30,7 +30,7 @@ user_name = "Dvir"
 ```python
 first = "Hello"
 second = "World"
-print(first + " " + second)  # Hello World
+print(first + second)  # HelloWorld
 print(first + " " + second)  # Hello World
 print(first, second)  # Hello World
 print(f"{first} {second} How are you today?")  # Hello World
