--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -13,18 +13,37 @@
 # 📘 משתנים – Variables
 
 ## ✨ הסבר
-משתנה הוא כמו קופסה שיש לה שם – ואנחנו יכולים לשים בתוכה משהו ערך.  
 
-אפשר לשים שם, מילה, מספר, או כל דבר אחר. 
+**משתנה** הוא כמו קופסה שיש לה **שם**, ואנחנו יכולים לשמור בתוכה **ערך**.
 
-וכל פעם שנרצה להשתמש בערך נרשום את שם הקופסא
+לתוך משתנה ניתן לשמור:
 
-שם הקופסא יהיה מופרד בקו תחתון ובלי גרשיים, על מנת שלא נקבל שגיאה
+* מספר
+* מילה (טקסט)
+* או כל סוג נתונים אחר
 
-שמות המשתנים חייבים להיות ייחודים על מנת שלא נקבל שגיאה
+בכל פעם שנרצה להשתמש בערך השמור במשתנה, נשתמש **בשם המשתנה**.
 
-זאת אומרת ששם המשתנה text והמשתנה Text הם יהיו 2 משתנים שונים לגמרי
+---
 
+### כללים לשמות משתנים והסיבה לכל כלל:
+
+* **שם המשתנה חייב להיות באנגלית**
+הסיבה: שפות תכנות נכתבות באנגלית, ושימוש בעברית או בשפות אחרות עלול לגרום לשגיאות, חוסר תאימות, וקושי בקריאת הקוד ע״י מתכנתים אחרים.
+
+* **שם המשתנה נכתב בלי גרשיים**
+הסיבה: גרשיים מגדירים טקסט (מחרוזת). אם נכתוב שם משתנה עם גרשיים, המחשב יתייחס אליו כטקסט ולא כמשתנה.
+
+* **מותר להשתמש בקו תחתון (`_`) במקום רווחים**
+הסיבה: רווחים אינם חוקיים בשמות משתנים, והקו התחתון מאפשר לקרוא שמות ארוכים בצורה ברורה.
+
+* **שמות משתנים חייבים להיות ייחודיים**
+ הסיבה: אם לשני משתנים יש אותו שם, המחשב לא ידע לאיזה ערך להתייחס ותחול שגיאה או דריסה של ערך קודם.
+
+* **שפת התכנות רגישה לאותיות גדולות וקטנות**
+הסיבה: המחשב מתייחס לכל שם בדיוק כפי שהוא נכתב.
+לכן שמות המשתנים `text` ו־`Text` הם **שני משתנים שונים לחלוטין*
+---
 ## 🔍 הסברים ודוגמאות
 
 ### יצירת משתנה עם טקסט
