--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -14,35 +14,35 @@
 
 ## ✨ הסבר
 
-**משתנה** הוא כמו קופסה שיש לה **שם**, ואנחנו יכולים לשמור בתוכה **ערך**.
+משתנה הוא כמו קופסה שיש לה שם, ואנחנו יכולים לשמור בתוכה ערך
 
 לתוך משתנה ניתן לשמור:
 
-* מספר
-* מילה (טקסט)
-* או כל סוג נתונים אחר
+מספר
 
-בכל פעם שנרצה להשתמש בערך השמור במשתנה, נשתמש **בשם המשתנה**.
+מילה (טקסט)
 
----
+או כל סוג נתונים אחר
 
-### כללים לשמות משתנים והסיבה לכל כלל:
+בכל פעם שנרצה להשתמש בערך השמור במשתנה, נשתמש בשם המשתנה
 
-* **שם המשתנה חייב להיות באנגלית**
-הסיבה: שפות תכנות נכתבות באנגלית, ושימוש בעברית או בשפות אחרות עלול לגרום לשגיאות, חוסר תאימות, וקושי בקריאת הקוד ע״י מתכנתים אחרים.
+כללים לשמות משתנים והסיבה לכל כלל
 
-* **שם המשתנה נכתב בלי גרשיים**
-הסיבה: גרשיים מגדירים טקסט (מחרוזת). אם נכתוב שם משתנה עם גרשיים, המחשב יתייחס אליו כטקסט ולא כמשתנה.
+שם המשתנה חייב להיות באנגלית
+הסיבה: שפות תכנות נכתבות באנגלית, ושימוש בעברית או בשפות אחרות עלול לגרום לשגיאות, חוסר תאימות, וקושי בקריאת הקוד על ידי מתכנתים אחרים
 
-* **מותר להשתמש בקו תחתון (`_`) במקום רווחים**
-הסיבה: רווחים אינם חוקיים בשמות משתנים, והקו התחתון מאפשר לקרוא שמות ארוכים בצורה ברורה.
+שם המשתנה נכתב בלי גרשיים
+הסיבה: גרשיים מגדירים טקסט (מחרוזת), ואם נכתוב שם משתנה עם גרשיים, המחשב יתייחס אליו כטקסט ולא כמשתנה
 
-* **שמות משתנים חייבים להיות ייחודיים**
- הסיבה: אם לשני משתנים יש אותו שם, המחשב לא ידע לאיזה ערך להתייחס ותחול שגיאה או דריסה של ערך קודם.
+מותר להשתמש בקו תחתון (_) במקום רווחים
+הסיבה: רווחים אינם חוקיים בשמות משתנים, והקו התחתון מאפשר לקרוא שמות ארוכים בצורה ברורה
 
-* **שפת התכנות רגישה לאותיות גדולות וקטנות**
-הסיבה: המחשב מתייחס לכל שם בדיוק כפי שהוא נכתב.
-לכן שמות המשתנים `text` ו־`Text` הם **שני משתנים שונים לחלוטין*
+שמות משתנים חייבים להיות ייחודיים
+הסיבה: אם לשני משתנים יש אותו שם, המחשב לא ידע לאיזה ערך להתייחס ותחול שגיאה או דריסה של ערך קודם
+
+שפת התכנות רגישה לאותיות גדולות וקטנות
+הסיבה: המחשב מתייחס לכל שם בדיוק כפי שהוא נכתב
+לכן שמות המשתנים text ו־Text הם שני משתנים שונים לחלוטין
 ---
 ## 🔍 הסברים ודוגמאות
 
