Fix formatting and spacing in variable naming rules

--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -20,15 +20,15 @@
 
 - מספר
 
-מילה (טקסט)
+- מילה (טקסט)
 
-או כל סוג נתונים אחר
+- או כל סוג נתונים אחר
 
 בכל פעם שנרצה להשתמש בערך השמור במשתנה, נשתמש בשם המשתנה
 
 כללים לשמות משתנים והסיבה לכל כלל
 
-שם המשתנה חייב להיות באנגלית
+- שם המשתנה חייב להיות באנגלית 
 הסיבה: שפות תכנות נכתבות באנגלית, ושימוש בעברית או בשפות אחרות עלול לגרום לשגיאות, חוסר תאימות, וקושי בקריאת הקוד על ידי מתכנתים אחרים
 
 שם המשתנה נכתב בלי גרשיים
