--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -18,11 +18,11 @@
 
 לתוך משתנה ניתן לשמור:
 
-- מספר
+1. מספר
 
-- מילה (טקסט)
+2. מילה (טקסט)
 
-- או כל סוג נתונים אחר
+3. או כל סוג נתונים אחר
 
 בכל פעם שנרצה להשתמש בערך השמור במשתנה, נשתמש בשם המשתנה
 
