--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -16,19 +16,13 @@
 
 משתנה הוא כמו קופסה שיש לה שם, ואנחנו יכולים לשמור בתוכה ערך
 
-לתוך משתנה ניתן לשמור:
-
-1. מספר
-
-2. מילה (טקסט)
-
-3. או כל סוג נתונים אחר
+לתוך משתנה ניתן לשמור: מספר, מילה (טקסט) או כל סוג נתונים אחר
 
 בכל פעם שנרצה להשתמש בערך השמור במשתנה, נשתמש בשם המשתנה
 
 כללים לשמות משתנים והסיבה לכל כלל
 
-- שם המשתנה חייב להיות באנגלית 
+שם המשתנה חייב להיות באנגלית 
 הסיבה: שפות תכנות נכתבות באנגלית, ושימוש בעברית או בשפות אחרות עלול לגרום לשגיאות, חוסר תאימות, וקושי בקריאת הקוד על ידי מתכנתים אחרים
 
 שם המשתנה נכתב בלי גרשיים
