--- a/01_basics/01.0_introduction.md
+++ b/01_basics/01.0_introduction.md
@@ -50,15 +50,13 @@ print("I love Python!")
 1. הגענו לשורה האחרונה(התחתונה ביותר( -זאת אומרת שכל הקוד עבד
 2. נעצרנו בשגיאה - זאת אומרת שהקוד הפסיק בשורה שיש בה שגיאה ולא ימשיך לשאר שורות הקוד הבאות
 
-## 💡 טיפים ותוספות מתקדמות
-- קבצים של פייתון מסתיימים ב־`.py`  
-- מומלץ להשתמש בעורכים אונליין כמו https://replit.com/ או להתקין את פייתון מהמחשב האישי דרך https://python.org  
-- שמרו על שמות משתנים, פונקציות וטקסטים בקוד באנגלית בלבד
+## 💡 תוספות
+- להתקנה של פייתון למחשב : https://youtu.be/n1VrNk56n-E 
 
 ## ✅ בדוק את עצמך
-1. מה זה פייתון ולמה דווקא פייתון
+1. מה זה פייתון? ולמה דווקא פייתון?
 2. מהי ריצת קוד?  
-3. מה יקרה אם תכתבו `print(Hello)` בהקשר לריצת הקוד בלי גרשיים?
+3. מה יקרה אם תכתבו `print(Hello)` בקשר לריצת קוד בלי גרשיים?
 
 <!-- DC_FOOTER_START -->
 ---
