--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -24,17 +24,14 @@
 
 שם המשתנה חייב להיות באנגלית
 
-הסיבה: שפות תכנות נכתבות באנגלית, ושימוש בעברית או בשפות אחרות עלול לגרום לשגיאות, חוסר תאימות, וקושי בקריאת הקוד על ידי מתכנתים אחרים
-
-
 שם המשתנה נכתב בלי גרשיים
 
 הסיבה: גרשיים מגדירים טקסט (מחרוזת), ואם נכתוב שם משתנה עם גרשיים, המחשב יתייחס אליו כטקסט ולא כמשתנה
 
 
-מותר להשתמש בקו תחתון (_) במקום רווחים
+חייב להשתמש בקו תחתון (_) במקום רווחים
 
-הסיבה: רווחים אינם חוקיים בשמות משתנים, והקו התחתון מאפשר לקרוא שמות ארוכים בצורה ברורה
+הסיבה: רווחים אינם חוקיים **בשמות משתנים** (בטקסט ניתן לשים רווחים), והקו התחתון מאפשר לקרוא שמות ארוכים בצורה ברורה
 
 
 שמות משתנים חייבים להיות ייחודיים
