--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -64,7 +64,7 @@ print(user_name)
 print(user_age)
 ```
 
-## 💡 טיפים מתקדמים
+## 💡 טיפים
 - שמות משתנים באנגלית בלבד, בלי רווחים, ובלי להתחיל עם מספר  
 - אפשר לשנות ערך של משתנה מתי שרוצים – זו כל המשמעות של משתנה  
 - אין צורך להגדיר את סוג המשתנה מראש – פייתון מזהה לבד  
