--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -22,28 +22,17 @@
 
 כללים לשמות משתנים והסיבה לכל כלל
 
-שם המשתנה חייב להיות באנגלית
+שם המשתנה חייב להיות 
 
-שם המשתנה נכתב בלי גרשיים
+- באנגלית
 
-הסיבה: גרשיים מגדירים טקסט (מחרוזת), ואם נכתוב שם משתנה עם גרשיים, המחשב יתייחס אליו כטקסט ולא כמשתנה
+- בלי גרשיים
 
+- בכמה מילים להשתמש בקו_תחתון  
 
-חייב להשתמש בקו תחתון (_) במקום רווחים
+- ייחודי
 
-הסיבה: רווחים אינם חוקיים **בשמות משתנים** (בטקסט ניתן לשים רווחים), והקו התחתון מאפשר לקרוא שמות ארוכים בצורה ברורה
-
-
-שמות משתנים חייבים להיות ייחודיים
-
-
-הסיבה: אם לשני משתנים יש אותו שם, המחשב לא ידע לאיזה ערך להתייחס ותחול שגיאה או דריסה של ערך קודם
-
-שפת התכנות רגישה לאותיות גדולות וקטנות
-
-הסיבה: המחשב מתייחס לכל שם בדיוק כפי שהוא נכתב
-
-לכן שמות המשתנים text ו־Text הם שני משתנים שונים לחלוטין
+בנוסף פייתון רגישה לאותיות גדולות וקטנות לכן שמות המשתנים text ו- Text הם שני משתנים שונים לחלוטין
 
 ---
 ## 🔍 הסברים ודוגמאות
@@ -65,7 +54,6 @@ print(user_age)
 ```
 
 ## 💡 טיפים
-- שמות משתנים באנגלית בלבד, בלי רווחים, ובלי להתחיל עם מספר  
 - אפשר לשנות ערך של משתנה מתי שרוצים – זו כל המשמעות של משתנה  
 - אין צורך להגדיר את סוג המשתנה מראש – פייתון מזהה לבד  
 
