--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -24,13 +24,13 @@
 
 שם המשתנה חייב להיות 
 
-- באנגלית
+ באנגלית
 
-- בלי גרשיים
+ בלי גרשיים
 
-- בכמה מילים להשתמש בקו_תחתון  
+ בכמה מילים להשתמש בקו_תחתון  
 
-- ייחודי
+ ייחודי
 
 בנוסף פייתון רגישה לאותיות גדולות וקטנות לכן שמות המשתנים text ו- Text הם שני משתנים שונים לחלוטין
 
