--- a/01_basics/3.0_variables.md
+++ b/01_basics/3.0_variables.md
@@ -16,7 +16,7 @@
 
 משתנה הוא כמו קופסה שיש לה שם, ואנחנו יכולים לשמור בתוכה ערך
 
-לתוך משתנה ניתן לשמור: מספר, מילה (טקסט) או כל סוג נתונים אחר
+לתוך משתנה ניתן לשמור ערכים מסוג של: מספר, טקסט, בוליאני או כל סוג נתונים אחר
 
 בכל פעם שנרצה להשתמש בערך השמור במשתנה, נשתמש בשם המשתנה
 
