--- a/01_basics/4.0_data_types.md
+++ b/01_basics/4.0_data_types.md
@@ -56,7 +56,9 @@ print("Age: " + str(25))  # OK!
 ## 💡 טיפים מתקדמים
 - ניתן להמיר בין סוגים עם `str()`, `int()`, `float()`  
 - חשוב לדעת מהו הסוג של כל משתנה לפני שמבצעים עליו פעולות  
-- `True` ו־`False` תמיד נכתבים עם אות גדולה באנגלית  
+- `True` ו־`False` תמיד נכתבים עם אות גדולה באנגלית
+<center><img src="טבלת-המרה.png" alt="טבלת המרה"></center>
+
 
 ##✅ בדוק את עצמך
 0. מה הם כל סוגי המשנים?
