--- a/01_basics/4.0_data_types.md
+++ b/01_basics/4.0_data_types.md
@@ -58,7 +58,8 @@ print("Age: " + str(25))  # OK!
 - חשוב לדעת מהו הסוג של כל משתנה לפני שמבצעים עליו פעולות  
 - `True` ו־`False` תמיד נכתבים עם אות גדולה באנגלית
 ---
-<center><img src="טבלת-המרה.png" alt="טבלת המרה"></center>
+<img src="טבלת-המרה.png" alt="טבלת המרה">
+
 ---
 ##✅ בדוק את עצמך
 0. מה הם כל סוגי המשנים?
