--- a/01_basics/4.0_data_types.md
+++ b/01_basics/4.0_data_types.md
@@ -29,14 +29,12 @@ user_height = 1.75   # Float עשרונים
 
 ### מחרוזות (Strings) טקסט 
 ```python
-user_name = "Dvir"
-# כל דבר בין זוג גרשיים
+user_name = "Dvir" # כל דבר בין זוג גרשיים
 ```
 
 ### בוליאנים (Booleans)
 ```python
-is_student = True
-# אמת או שקר False
+is_student = True # אמת או שקר False
 ```
 
 ### בדיקת סוג הנתון
