--- a/01_basics/4.0_data_types.md
+++ b/01_basics/4.0_data_types.md
@@ -23,18 +23,18 @@
 
 ### מספרים (Integers ו-Floats)
 ```python
-user_age = 25        # Integer שלמים
-user_height = 1.75   # Float עשרונים
+user_age = 25                # Integer שלמים
+user_height = 1.75           # Float עשרונים
 ```
 
 ### מחרוזות (Strings) טקסט 
 ```python
-user_name = "Dvir" # כל דבר בין זוג גרשיים
+user_name = "Dvir"           # כל דבר בין זוג גרשיים
 ```
 
 ### בוליאנים (Booleans)
 ```python
-is_student = True # אמת או שקר False
+is_student = True            # אמת או שקר / False או True 
 ```
 
 ### בדיקת סוג הנתון
@@ -42,22 +42,22 @@ is_student = True # אמת או שקר False
 print(type(user_age))        # <class 'int'>
 print(type(user_height))     # <class 'float'>
 print(type(user_name))       # <class 'str'>
-print(type(is_student)) # <class 'bool'>
+print(type(is_student))      # <class 'bool'>
 ```
 
 ### לא ניתן לערבב סוגים בלי המרה
 ```python
-# print("Age: " + 25)  # Error!
-print("Age: " + str(25))  # OK!
+# print("Age: " + 25)        # Error!
+print("Age: " + str(25))     # OK!
 ```
 
 ## 💡 טיפים מתקדמים
 - ניתן להמיר בין סוגים עם `str()`, `int()`, `float()`  
 - חשוב לדעת מהו הסוג של כל משתנה לפני שמבצעים עליו פעולות  
-- `True` ו־`False` תמיד נכתבים עם אות גדולה באנגלית
+- `True` ו`False` תמיד נכתבים עם אות גדולה באנגלית
+
 ---
 <img src="טבלת-המרה.png" alt="טבלת המרה">
-
 ---
 ## ✅ בדוק את עצמך
 0. מה הם כל סוגי המשנים?
