--- a/01_basics/4.0_data_types.md
+++ b/01_basics/4.0_data_types.md
@@ -45,16 +45,11 @@ print(type(user_name))       # <class 'str'>
 print(type(is_student))      # <class 'bool'>
 ```
 
-### לא ניתן לערבב סוגים בלי המרה
+### לא ניתן לערבב סוגים בלי המרה - נלמד בהארכה בחומר הבא
 ```python
 # print("Age: " + 25)        # Error!
 print("Age: " + str(25))     # OK!
 ```
-
-## 💡 טיפים מתקדמים
-- ניתן להמיר בין סוגים עם `str()`, `int()`, `float()`  
-- חשוב לדעת מהו הסוג של כל משתנה לפני שמבצעים עליו פעולות  
-- `True` ו`False` תמיד נכתבים עם אות גדולה באנגלית
 
 ---
 
@@ -63,7 +58,7 @@ print("Age: " + str(25))     # OK!
 ---
 ## ✅ בדוק את עצמך
 0. מה הם כל סוגי המשנים?
-1. מה ההבדל בין int ל־float?  
+1. מה ההבדל בין int ל-float?  
 2. מה יקרה אם תנסו לחבר בין string למספר בלי להמיר?  
 3. מהו הפלט של `type("hello")`?
 
