Fix formatting and punctuation in type casting guide

--- a/01_basics/4.0_type_casting.md
+++ b/01_basics/4.0_type_casting.md
@@ -103,8 +103,8 @@ print(bool(False))
 ## 🧠 כללי זהב להמרות
 
 * `str` תמיד מצליח
-* `int` ו־`float` ממחרוזת עובדים רק אם זה מספר חוקי
-* המרה מ־`float` ל־`int` חותכת ולא מעגלת
+* `int` ו-`float` ממחרוזת עובדים רק אם זה מספר חוקי
+* המרה מ-`float` ל-`int` חותכת ולא מעגלת
 * `bool`
 
   * ריק או אפס → False
@@ -119,7 +119,7 @@ print(bool(False))
 ## ✅ בדוק את עצמך
 
 0. מהי המרה ולמה צריך אותה
-1. מה יקרה ב־`int("5.5")`
+1. מה יקרה ב-`int("5.5")`
 2. מה יהיה הערך של `bool(" ")`
 3. למה `int(2.9)` לא מחזיר 3
 
